# WimForge

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  compose.yaml  mkdocs.yml  requirements-docs.txt
.github/workflows/: container.yml  pages.yml  release.yml  wiki.yml
assets/: wimforge.capture.manifest  wimforge.manifest  wimforge.rc.in
deploy/provisioning/: compose.token.yaml  config.example.json
deploy/winpe/: Invoke-WimForgeProvisioning.ps1  Startnet.example.cmd
docs/: docker-provisioning.md  embedded-terminal.md  gallery.md  index.md  package-studio.md  release-design.md  unattended-studio.md  wiki-search.md  wiki.md
docs/assets/: wiki-regex-builder.schema.json
docs/audits/: 2026-07-10-full-product-audit.md  2026-07-20-three-pass-usage-test.md
docs/javascripts/: wiki-regex-worker.js  wiki-search.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/wiki/: Application-Tour.md  Architecture-and-Data-Layout.md  Building-and-Releases.md  CLI.md  Contributing.md  Customize.md  Docker-Provisioning.md  Embedded-Terminal.md  Getting-Started.md  Group-Policy-Studio.md  History-Time-Machine.md  Home.md  Image-Servicing.md  NTLite-Feature-Comparison.md  Notification-Center.md  Package-Studio.md  Project-Bundles.md  Projects-and-Sources.md  Review-and-Run.md  Safety-and-Recovery.md  Screenshots.md  Settings.md  Troubleshooting.md  Unattended-Studio.md  Virtual-Machine-Lab.md  WinForge-Bridge.md  Workspace-Tabs.md  _Footer.md  _Sidebar.md
installer/: WimForge.iss
qml/: Main.qml
qml/components/: ContextHistoryPanel.qml  DesignTokens.qml  MetricCard.qml  NotificationCenter.qml  ProjectStartPage.qml  SearchPalette.qml  Snackbar.qml  UpdateCatalogSheet.qml  WfButton.qml  WfField.qml  WfIcon.qml  WfPageHeader.qml  WfTabBar.qml
qml/pages/: CustomizePage.qml  DashboardPage.qml  GpoStudioPage.qml  HistoryPage.qml  PackageStudioPage.qml  PlanPage.qml  SettingsPage.qml  SourcePage.qml  TerminalPage.qml  UnattendedStudioPage.qml  VmLabPage.qml  WinForgeBridgePage.qml
scripts/: bootstrap-build.ps1  build-release.ps1  capture-documentation-screenshots.ps1  mkdocs_hooks.py  sync_wiki.py  verify-documentation-screenshots.ps1
server/: provisioning_server.py
src/: AppController.cpp  AppController.h  cli_main.cpp  main.cpp
src/cli/: CliRunner.cpp  CliRunner.h
src/core/: EmbeddedTerminalSession.cpp  EmbeddedTerminalSession.h  GitHistory.cpp  ImageSourceInspector.cpp  ImageSourceInspector.h  JobEngine.cpp  NotificationStore.cpp  OpenCodeSetup.cpp  OpenCodeSetup.h  ProcessLaunch.cpp  ProcessLaunch.h  ProjectConfig.cpp  ProjectConfig.h  SearchIndex.cpp  SearchIndex.h  UnattendBuilder.cpp  VmLab.cpp  VmLab.h  VmLabCliService.cpp  VmLabCliService.h  VmLabManager.cpp  VmLabManager.h  VmLabProviders.cpp  VmLabProviders.h  VmLabScope.cpp  VmLabScope.h  VmLabVmx.cpp  VmLabVmx.h  VmValidationStore.cpp  VmValidationStore.h  WorkspaceTabs.cpp  WorkspaceTabs.h
tests/: CMakeLists.txt  bootstrap_build_tests.ps1  cli_runner_tests.cpp  compose_contract.py  container_smoke.py  embedded_terminal_tests.cpp  gpo_policy_compiler_tests.cpp  image_source_inspector_tests.cpp  install_layout_contract_tests.ps1  opencode_setup_tests.cpp  process_launch_tests.cpp  project_bundle_tests.cpp  project_history_tests.cpp  provisioning_server_tests.py  qml_contract_tests.cpp  search_index_tests.cpp  unattend_builder_tests.cpp  vm_lab_cli_service_tests.cpp  vm_lab_manager_tests.cpp  vm_lab_tests.cpp  vm_validation_store_tests.cpp  winpe_provisioning_contract_tests.ps1  workspace_tabs_tests.cpp
website/: index.html  robots.txt  sitemap.xml
website/tools/: check_site.py
